[FIX] personal img and text align

--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,13 @@ main{
 
 .personal li img{
     width: 35px;
+    vertical-align: middle;
+    padding-bottom: 10px;
 }
 
 .personal li span{
     padding-left: 5px;
+    vertical-align: middle;
 }
 
 /* playlist */
